Remove "glut" dependency.
- SkyContext.[ch]pp needs to query the window size, but apparently doesn't
  do anything with it.  We can hard wire a size and the cloud code seems to
  behave fine.

- SkyLight.[ch]pp depends on glut_shapes so I copied over the code so it
  can access those routines locally.  (The routines that are used are
  simply combining calls to libGLU.a

--- a/simgear/scene/sky/clouds3d/Makefile.am
+++ b/simgear/scene/sky/clouds3d/Makefile.am
@@ -25,6 +25,7 @@ libsgclouds3d_a_SOURCES = \
 	plane.cpp plane.hpp \
 	camera.cpp camera.hpp \
 	camutils.cpp camutils.hpp \
+	glut_shapes.c glut_shapes.h \
 	minmaxbox.cpp minmaxbox.hpp \
 	SkyAABBTree.hpp \
 	SkyArchive.cpp SkyArchive.hpp \
