--- a/simgear/route/Makefile.am
+++ b/simgear/route/Makefile.am
@@ -19,7 +19,7 @@ waytest_LDADD = \
 	$(top_builddir)/simgear/math/libsgmath.a \
 	$(top_builddir)/simgear/debug/libsgdebug.a \
 	$(top_builddir)/simgear/misc/libsgmisc.a \
-	$(top_builddir)/simgear/xml/libsgxml.a \
+	$(base_LIBS) \
 	-lz
 
 routetest_SOURCES = routetest.cxx
@@ -27,4 +27,5 @@ routetest_SOURCES = routetest.cxx
 routetest_LDADD = \
 	$(top_builddir)/simgear/route/libsgroute.a \
 	$(top_builddir)/simgear/math/libsgmath.a \
-	$(top_builddir)/simgear/debug/libsgdebug.a
+	$(top_builddir)/simgear/debug/libsgdebug.a \
+	$(base_LIBS)
