Nasal and event manager updates from Andy Ross.

--- a/configure.ac
+++ b/configure.ac
@@ -356,6 +356,7 @@ AC_CONFIG_FILES([ \
 	simgear/math/Makefile \
 	simgear/metar/Makefile \
 	simgear/misc/Makefile \
+	simgear/nasal/Makefile \
 	simgear/props/Makefile \
 	simgear/route/Makefile \
 	simgear/scene/Makefile \
