rename libnasal.a to libsgnasal.a to match the existing SimGear library naming convention.

--- a/simgear/nasal/Makefile.am
+++ b/simgear/nasal/Makefile.am
@@ -1,10 +1,10 @@
 includedir = @includedir@/nasal
 
-lib_LIBRARIES = libnasal.a
+lib_LIBRARIES = libsgnasal.a
 
 include_HEADERS = nasal.h
 
-libnasal_a_SOURCES = \
+libsgnasal_a_SOURCES = \
 	code.c \
 	codegen.c \
 	debug.c \
