--- a/simgear/compatibility/Makefile.am
+++ b/simgear/compatibility/Makefile.am
@@ -1,33 +1,1 @@
-includedir = @includedir@/compatibility
-
-EXTRA_DIST = README
-
-include_HEADERS	= \
-	cfloat \
-	csetjmp \
-	cstdio \
-	cwchar \
-	iostream \
-	strstream \
-	sstream \
-	cassert \
-	climits \
-	csignal \
-	cstdlib \
-	cwctype \
-	istream \
-	cctype \
-	clocale \
-	cstdarg \
-	cstring \
-	fstream \
-	iterator \
-	cerrno \
-	cmath \
-	cstddef \
-	ctime \
-	iomanip \
-	new \
-	streambuf \
-	\
-	irix_string
+SUBDIRS = $(MIPSpro_DIRS)
