Track some additional data required for computing vasi/papi colors.

--- a/simgear/scene/tgdb/Makefile.am
+++ b/simgear/scene/tgdb/Makefile.am
@@ -9,7 +9,8 @@ include_HEADERS = \
 	leaf.hxx \
 	obj.hxx \
 	pt_lights.hxx \
-	userdata.hxx
+	userdata.hxx \
+	vasi.hxx
 
 libsgtgdb_a_SOURCES = \
 	apt_signs.cxx \
