Rewrite the entire audio support library on top of OpenAL rather than plib's sound manager.  The interface was simplified and cleaned up a bit, and I haven't back ported these changes to the plib sound wrappers ... we could I suppose if someone really had a problem, but I haven't seen anything so far that would indicate the extra effort is worth it.

--- a/simgear/sound/Makefile.am
+++ b/simgear/sound/Makefile.am
@@ -1,11 +1,29 @@
 includedir = @includedir@/sound
 
+EXTRA_DIST = jet.wav
+
 lib_LIBRARIES = libsgsound.a
 
 noinst_HEADERS =
 
-include_HEADERS = sound.hxx soundmgr.hxx
+include_HEADERS = \
+	sample_openal.hxx \
+	soundmgr_openal.hxx \
+	xmlsound.hxx 
 
-libsgsound_a_SOURCES = sound.cxx soundmgr.cxx
+libsgsound_a_SOURCES = \
+	sample_openal.cxx  \
+	soundmgr_openal.cxx \
+	xmlsound.cxx 
+
+noinst_PROGRAMS = openal_test1 openal_test2
+
+openal_test1_SOURCES = openal_test1.cxx
+openal_test2_SOURCES = openal_test2.cxx
+
+openal_test1_LDADD = -lsgdebug -lopenal
+openal_test2_LDADD = \
+	$(top_builddir)/simgear/sound/libsgsound.a \
+	-lsgdebug -lsgmisc -lsgstructure $(openal_LIBS)
 
 INCLUDES = -I$(top_srcdir)
