Hopefully fix a chicken/egg linking problem for people who've never built or installed simgear before.

--- a/simgear/sound/Makefile.am
+++ b/simgear/sound/Makefile.am
@@ -21,9 +21,14 @@ noinst_PROGRAMS = openal_test1 openal_test2
 openal_test1_SOURCES = openal_test1.cxx
 openal_test2_SOURCES = openal_test2.cxx
 
-openal_test1_LDADD = -lsgdebug $(openal_LIBS)
+openal_test1_LDADD = \
+	$(top_builddir)/simgear/debug/libsgdebug.a \
+	$(openal_LIBS)
 openal_test2_LDADD = \
 	$(top_builddir)/simgear/sound/libsgsound.a \
-	-lsgdebug -lsgmisc -lsgstructure $(openal_LIBS)
+	$(top_builddir)/simgear/debug/libsgdebug.a \
+	$(top_builddir)/simgear/misc/libsgmisc.a \
+	$(top_builddir)/simgear/structure/libsgstructure.a \
+	$(openal_LIBS)
 
 INCLUDES = -I$(top_srcdir)
