--- a/simgear/scene/model/Makefile.am
+++ b/simgear/scene/model/Makefile.am
@@ -6,6 +6,7 @@ noinst_HEADERS =
 
 include_HEADERS = \
 	animation.hxx \
+	flash.hxx \
 	location.hxx \
 	model.hxx \
 	modellib.hxx \
@@ -13,6 +14,7 @@ include_HEADERS = \
 
 libsgmodel_a_SOURCES = \
 	animation.cxx \
+	flash.cxx \
 	location.cxx \
 	model.cxx \
 	modellib.cxx \
