Create our own stdint.h(xx) implementation and use it where needed.

--- a/simgear/misc/Makefile.am
+++ b/simgear/misc/Makefile.am
@@ -10,7 +10,8 @@ include_HEADERS = \
 	tabbed_values.hxx \
 	texcoord.hxx \
 	zfstream.hxx \
-	interpolator.hxx
+	interpolator.hxx \
+	stdint.hxx
 
 libsgmisc_a_SOURCES = \
 	sg_path.cxx \
@@ -21,12 +22,14 @@ libsgmisc_a_SOURCES = \
 	zfstream.cxx \
 	interpolator.cxx
 
-noinst_PROGRAMS = tabbed_value_test
+noinst_PROGRAMS = tabbed_value_test swap_test
 
 tabbed_value_test_SOURCES = tabbed_values_test.cxx
 tabbed_value_test_LDADD = \
 	$(top_builddir)/simgear/misc/libsgmisc.a \
 	$(top_builddir)/simgear/xml/libsgxml.a \
 	$(top_builddir)/simgear/debug/libsgdebug.a
+
+swap_test_SOURCES = swap_test.cpp
 
 INCLUDES = -I$(top_srcdir)
