--- a/am2dsp.cfg
+++ b/am2dsp.cfg
@@ -4,13 +4,12 @@ exclude_dir = threads
 include_path = .
 include_path = ..
 include_path = .\SimGear
-include_path = .\SimGear\metakit-2.4.3\include
-include_path = ..\SimGear\zlib-1.1.4
+include_path = ..\zlib-1.2.3
+include_path = "..\OpenAL 1.0 Software Development Kit\include"
 
+define = _USE_MATH_DEFINES
+define = _CRT_SECURE_NO_DEPRECATE
 define = HAVE_CONFIG_H
-
-add_project = .\SimGear\metakit-2.4.3\win\msvc60\mklib.dsp,mklib
-add_project = .\SimGear\zlib.dsp,zlib
 
 # Rule to create simgear_config.h
 add_source_file = SOURCE=.\simgear\simgear_config.h.vc5\
