--- a/Makefile.am
+++ b/Makefile.am
@@ -4,6 +4,7 @@ EXTRA_DIST = \
 	DoxygenMain.cxx \
 	README.MSVC \
 	README.zlib \
+        projects \
 	SimGear.dsp \
 	SimGear.dsw
 
@@ -11,6 +12,7 @@ SUBDIRS	= simgear
 
 dist-hook:
 	(cd $(top_srcdir); $(HOME)/Projects/FlightGear/admin/am2dsp.pl)
+	rm -rf `find $(distdir)/projects -name CVS`
 
 #
 # Rule to build RPM distribution package
